# 221_329__Goncharenko

./: README.md
task1/lab1/: CMakeLists.txt  data.txt  main.cpp  res.qrc
